@@ -25,6 +25,8 @@ if (count($requestIDtmp) >= 1)
 		{
 			$bFound = true;
 		}
+		else
+			echo ".";
 	}
 }
 
@@ -32,7 +34,7 @@ if ($bFound)
 {
 	$db->query("UPDATE releases SET reqidstatus = 1, searchname = " . $db->escapeString($newTitle) . " WHERE ID = " . $pieces[0]);
 	echo "\nUpdated requestID " . $requestID . " to release name: ".$newTitle;
-}					
+}
 else
 {
 	$db->query("UPDATE releases SET reqidstatus = -2 WHERE ID = " . $pieces[0]);
@@ -42,17 +44,17 @@ function getReleaseNameFromRequestID($site, $requestID, $groupName)
 {
 	if ($site->request_url == "")
 		return "";
-	
+
 	// Build Request URL
 	$req_url = str_ireplace("[GROUP_NM]", urlencode($groupName), $site->request_url);
 	$req_url = str_ireplace("[REQUEST_ID]", urlencode($requestID), $req_url);
-	
+
 	$xml = simplexml_load_file($req_url);
-	
+
 	if (($xml == false) || (count($xml) == 0))
 		return "";
-		
+
 	$request = $xml->request[0];
 
 	return (!isset($request) || !isset($request["name"])) ? "" : $request['name'];
-}		
+}
